--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 
   <body>
     <div class="css-ui-box">
-        <div class="css-prog-title-div"></div>
-        <div class="css-task-box-div">
-          <button class="js-btn-add css-add-task-btn" 
-          onclick="addTask()">Add a new task</button>
-        </div>
+          <div class="js-overlay"></div>
+          <div class="css-prog-title-div">
+            <div class="css-progress-bar-div" id="progressbar">
+                          <div class="css-progress-bar-div-ptr" id="ptrprogress"></div>
+            </div>
+          </div>
+          <div class="css-task-box-div">
+            <button class="js-btn-add css-add-task-btn" 
+            onclick="addTask()">Add a new task</button>
+          </div>
     </div>
-
-    
   </body>
 
   <script src="index.js"></script>
