--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <div class="css-ui-box">
           <div class="js-overlay"></div>
           <div class="css-prog-title-div">
+            <h1 class="app-title">PaceYourSelf</h1>
             <div class="css-progress-bar-div" id="progressbar">
                           <div class="css-progress-bar-div-ptr" id="ptrprogress"></div>
             </div>
           </div>
           <div class="css-task-box-div">
-            <button class="js-btn-add css-add-task-btn" 
+            <div class="buttons-div">
+                                        <button class="js-btn-add css-add-task-btn" 
             onclick="addTask()">Add a new task</button>
-          </div>
+            </div>
+            </div>
     </div>
   </body>
 
