--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
           <div class="js-overlay"></div>
           <div class="css-prog-title-div">
             <h1 class="app-title">PaceYourSelf</h1>
+         
             <div class="css-progress-bar-div" id="progressbar">
+                          <div class="js-percentage">%</div>
                           <div class="css-progress-bar-div-ptr" id="ptrprogress"></div>
             </div>
           </div>
