about&help page added and fixed percentage bug

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             onclick="addTask()">Add a new task</button>
             </div>
             </div>
+          <div class="css-hidden-bar">
+            <button class="about-css nav-btn-css" onclick="show_about()">About</button>
+            <span>···</span>
+            <button class="help-css nav-btn-css" onclick="show_help()">Help</button>
+          </div>
     </div>
   </body>
 
