changed display function need to change storage function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div class="buttons-div">
                   <div class="misc-indicator">Important tasks</div>  
                   <div class="imp-buttons-list">
-                      <button class="js-btn-add css-add-task-btn" onclick="addTask('imp')">Add a new task</button>
+                      <button class="js-btn-add css-add-task-btn" id="ImpAdd" onclick="addTask('imp')">Add a new task</button>
                   </div>          
               </div>
           
