--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </div>
           
               <div class="misc-task-div">
-                  <div class="misc-indicator">Misc. Task</div>
+                  <div class="misc-indicator">Miscellaneous Tasks</div>
                   <div class="misc-task-list">
                       <button class="js-btn-add css-add-task-btn" onclick="addTask('misc')">Add a new task</button>
                   </div>
